--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#agendamento">Agendamento</a></li>
                 <li><a href="#calendario">Calendário</a></li>
                 <li><a href="#convenio">Convênios</a></li>
-                <li><a href="/contato.html">Contato</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </div>
     </div>
